--- a/templates/sirftemp.html
+++ b/templates/sirftemp.html
@@ -3,18 +3,16 @@
 <html>
 
 <head>
-
-
-<title> </title>
-<link rel='stylesheet' href="{{ url_for('static', filename='mocpage.css') }}"/>
-<link rel='stylesheet' href="C:/users/alex/documents/workspace/officialsirfscripts/politicize/source/static/css/mocpage.css"/>
-<link rel='stylesheet' href="C:/users/alex/documents/workspace/officialsirfscripts/politicize/source/static/css/bootstrap.min.css"
-<link rel='stylesheet' href="{{ url_for('static', filename='bootstrap.min.css') }}">
-<link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-<link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <title> Policize </title>
+  <link rel='stylesheet' href="{{ url_for('static', filename='mocpage.css') }}"/>
+  <link rel='stylesheet' href="static/css/mocpage.css"/>
+  <link rel='stylesheet' href="static/css/bootstrap.min.css"
+  <link rel='stylesheet' href="{{ url_for('static', filename='bootstrap.min.css') }}">
+  <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -50,18 +48,7 @@
   	 </div>
   </div>     	
 </div>
-
-
-
-
-
-
-
-
-
-  <script src="C:/users/alex/documents/workspace/officialsirfscripts/politicize/source/static/js/bootstrap.min.js"/>
- <!-- <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"/>!-->
+  <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"/>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </body>
-
 </html>
